z-index bug fix

--- a/src/assets/styles/_card.scss
+++ b/src/assets/styles/_card.scss
@@ -5,3 +5,14 @@
 	margin-bottom: 1rem;
 	font-size: 1.2rem;
 }
+
+.content__container {
+	background-color: #08060e;
+	display: flex;
+	flex-direction: column;
+	padding: 0 1rem 2rem 1rem;
+	color: #fff;
+	margin: auto;
+	margin-top: -1.5rem;
+	z-index: 1;
+}
