--- a/src/components/hero-home-card/HeroHomeCard.scss
+++ b/src/components/hero-home-card/HeroHomeCard.scss
@@ -18,7 +18,7 @@
 	color: #fff;
 	margin: auto;
 	margin-top: -1.5rem;
-	z-index: 9999;
+	z-index: 1;
 }
 
 .powerstat-value {
