--- a/src/components/hero-team-card/HeroTeamCard.scss
+++ b/src/components/hero-team-card/HeroTeamCard.scss
@@ -18,17 +18,6 @@
 	margin-top: -5rem;
 }
 
-.content__container {
-	background-color: #08060e;
-	display: flex;
-	flex-direction: column;
-	padding: 0 1rem 2rem 1rem;
-	color: #fff;
-	margin: auto;
-	margin-top: -1.5rem;
-	z-index: 9999;
-}
-
 .powerstat-icon {
 	width: 1.3rem;
 	height: 1.3rem;
